Add (Grafico da tela inicial sendo alimentado pelos serviços, tela de filtros das listas de gerenciamento criadas)
O gráfico presente na tela inicial, agora é preenchido com os serviços presentes na tabela. No momento, ele não está sendo afetado por filtros.
Tela de filtros criada na tela de gerenciamento, até o momento, não está funcional.
Tela de Detalhes do serviço criada e funcional.
Tela de Excluir serviço criada e funcional.
Tela de Editar serviço criada, mas não funcional.

--- a/app/src/main/res/layout/bottom_sheet_deletar_categoria.xml
+++ b/app/src/main/res/layout/bottom_sheet_deletar_categoria.xml
@@ -11,12 +11,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#DC3545"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_cancelar_acao"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Não"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/cancelar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonConfirmarExclusaoCategoria"
@@ -24,19 +31,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#C6E5B1"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_confirmar_excluir"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Sim"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/confirmar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/view2"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +65,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +81,7 @@
         android:text="Nome:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +97,7 @@
         android:text="Deseja realmente excluir a categoria com os seguintes dados:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Excluir Categoria"
+        android:fontFamily="@font/montserrat_bold"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
