--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="color6">#2B8A2F</color>
     <color name="color7">#3679B1</color>
     <color name="color8">#806A2A</color>
+    <color name="colorLista1">#FFEDCC</color>
+    <color name="colorLista2">#DCEEFB</color>
 
 </resources>
