--- a/app/src/main/res/layout/bottom_sheet_deletar_cliente.xml
+++ b/app/src/main/res/layout/bottom_sheet_deletar_cliente.xml
@@ -57,6 +57,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LinhaTopo" />
@@ -76,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textValorTelefoneCliente" />
@@ -91,6 +92,7 @@
         android:text="Deseja realmente excluir o cliente com os seguintes dados:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view4" />
@@ -105,6 +107,7 @@
         android:text="Nome:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +122,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +138,7 @@
         android:text="Telefone:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,6 +153,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,12 +165,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#C6E5B1"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_confirmar_excluir"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Sim"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/confirmar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone3"
-        app:layout_constraintTop_toBottomOf="@+id/view6" />
+        app:layout_constraintTop_toBottomOf="@+id/view6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonCancelarExclusao"
@@ -172,11 +185,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#DC3545"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_cancelar_acao"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Não"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/cancelar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view6" />
+        app:layout_constraintTop_toBottomOf="@+id/view6"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
