--- a/app/src/main/res/layout/bottom_sheet_detalhes_categoria.xml
+++ b/app/src/main/res/layout/bottom_sheet_detalhes_categoria.xml
@@ -37,6 +37,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +75,7 @@
         android:text="Nome:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +90,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,12 +102,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#FFC107"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_editar"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/editar_icon"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Editar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone2"
-        app:layout_constraintTop_toBottomOf="@+id/view7" />
+        app:layout_constraintTop_toBottomOf="@+id/view7"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonExcluirCategoria"
@@ -112,10 +122,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#DC3545"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_confirmar_excluir"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Excluir"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/apagar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view7" />
+        app:layout_constraintTop_toBottomOf="@+id/view7"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
