--- a/app/src/main/res/layout/bottom_sheet_detalhes_cliente.xml
+++ b/app/src/main/res/layout/bottom_sheet_detalhes_cliente.xml
@@ -47,6 +47,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LinhaTopo" />
@@ -66,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textValorTelefoneCliente" />
@@ -81,6 +82,7 @@
         android:text="Nome:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +97,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +113,7 @@
         android:text="Telefone:"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,6 +128,7 @@
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,12 +140,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_editar"
         android:backgroundTint="#FFC107"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Editar"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:drawableStart="@drawable/editar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone3"
-        app:layout_constraintTop_toBottomOf="@+id/view6" />
+        app:layout_constraintTop_toBottomOf="@+id/view6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonExcluirCliente"
@@ -148,11 +161,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_confirmar_edicao"
         android:backgroundTint="#DC3545"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Excluir"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:drawableStart="@drawable/apagar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view6" />
+        app:layout_constraintTop_toBottomOf="@+id/view6"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
