--- a/app/src/main/res/layout/bottom_sheet_editar_categoria.xml
+++ b/app/src/main/res/layout/bottom_sheet_editar_categoria.xml
@@ -11,12 +11,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#DC3545"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_cancelar_acao"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Não"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/cancelar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone5"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view9" />
+        app:layout_constraintTop_toBottomOf="@+id/view9"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonConfirmarEditarCategoria"
@@ -24,12 +31,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#C6E5B1"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_confirmar_edicao"
+        android:fontFamily="@font/montserrat_regular"
         android:text="Sim"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:drawableStart="@drawable/confirmar_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone5"
-        app:layout_constraintTop_toBottomOf="@+id/view9" />
+        app:layout_constraintTop_toBottomOf="@+id/view9"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/paredeEntreNomeTelefone5"
@@ -48,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +88,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linhaTopo3" />
@@ -98,7 +113,6 @@
         android:layout_marginEnd="16dp"
         app:counterEnabled="true"
         app:counterMaxLength="20"
-        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view8">
@@ -108,6 +122,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome*:"
-            android:maxLength="20"></com.google.android.material.textfield.TextInputEditText>
+            android:inputType="text"
+            app:layout_constraintTop_toBottomOf="@+id/view8"
+            android:fontFamily="@font/montserrat_regular"
+            android:maxLength="20">
+
+        </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
