--- a/app/src/main/res/layout/item_lista_categoria.xml
+++ b/app/src/main/res/layout/item_lista_categoria.xml
@@ -48,6 +48,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="TextView"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -65,7 +66,7 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintGuide_percent="0.8"
+                app:layout_constraintGuide_percent="0.85"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,20 +78,20 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintGuide_percent="0.2"
+                app:layout_constraintGuide_percent="0.15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/imageLupaDetalhes"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
+                android:layout_height="0dp"
                 android:background="#00000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/paredeEntreTelefoneLupa"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/lupa" />
+                app:srcCompat="@drawable/info_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
