--- a/app/src/main/res/layout/item_lista_cliente.xml
+++ b/app/src/main/res/layout/item_lista_cliente.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutCard"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/card_lista">
@@ -34,7 +35,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/person_card"
+                android:background="@drawable/pessoa_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,10 +49,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="TextView"
                 android:textColor="#000000"
                 android:textSize="14sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa"
                 app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone4"
@@ -69,6 +70,7 @@
                 android:text="TextView"
                 android:textColor="#000000"
                 android:textSize="14sp"
+                android:fontFamily="@font/montserrat_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa"
                 app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone4"
@@ -83,7 +85,7 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintGuide_percent="0.8"
+                app:layout_constraintGuide_percent="0.85"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,20 +97,20 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintGuide_percent="0.2"
+                app:layout_constraintGuide_percent="0.15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/imageLupaDetalhes"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
+                android:layout_height="0dp"
                 android:background="#00000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/paredeEntreTelefoneLupa"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/lupa" />
+                app:srcCompat="@drawable/info_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
